kunert citation fixed

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -4997,6 +4997,14 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\RYTSJUI8\\Kunert et al. - 2017 - A revised hydrological model for the Central Amazo.pdf;C\:\\Users\\Me\\Zotero\\storage\\9KUSA3AM\\S0168192317300825.html}
 }
 
+@article{kunertSummerTemperaturesReachinpress,
+  title = {Summer Temperatures Reach the Thermal Tolerance Threshold of Potosynthetic Decline in Temperate Confiers},
+  author = {Kunert, Norbert},
+  year = {in press},
+  journaltitle = {Plant Biology},
+  issue = {Responses of European forests to global change-type droughts}
+}
+
 @article{kuppersLeafGasExchange1993,
   title = {Leaf Gas Exchange of Beech ({{Fagus}} Sylvatica {{L}}.) Seedlings in Lightflecks: Effects of Fleck Length and Leaf Temperature in Leaves Grown in Deep and Partial Shade},
   shorttitle = {Leaf Gas Exchange of Beech ({{Fagus}} Sylvatica {{L}}.) Seedlings in Lightflecks},
