--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -47,6 +47,8 @@ Nidhi Vinod & Kristina Anderson-Teixeira (on behalf of all coauthors)
 
 The article is easy to read and well structured, I appreciated reading it. It covers a broad area and explains relatively complex ideas in simple terms and efficiently. I also enjoyed the changes in scale (leaf scale to ecosystem scale). I think this paper will be very useful as a reference for the plant physiologist community and for modelers.
 
+**Thank you.**
+
 I have been really interested in the comparison between gradients in canopy of individual trees and canopy made of an assemblage of species (paragraph 3.1 and 3.2. However, the paragraph 3.2 is relatively short, and I am curious if it can be developed a little bit more (maybe not!).
 
 
