--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -31,6 +31,8 @@ We are pleased to submit a revised version of our manuscript, "Thermal sensitivi
 
 - ...
 
+*(To ensure rapid handling of your manuscript we would be grateful if you could confirm, in the cover letter to the Editor, whether or not there are any important elements of the figures that need to be retained (eg. colours used, plant species drawn, layout and spacing, symbols, etc) and if you have specific instructions that you would like the illustrator to take on board.)*
+
 Thank you for considering this revised version, and we look forward to your response.
 
 Sincerely,
