--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -343,7 +343,7 @@ $\ddagger$ 1. Kafuti et al. 2020; 2. Van Wittenberghe et al. 2012; 3. Roberts et
 
 ### 4.1. Conductance
 
-Leaf hydraulic, stomatal, and $g_b$ are all critical for latent heat loss, which in turn can be important for regulating $T_{leaf}$ (Fig. `r fig_leaf_T`). 
+Leaf hydraulic, stomatal conductance, and $g_b$ are all critical for latent heat loss, which in turn can be important for regulating $T_{leaf}$ (Fig. `r fig_leaf_T`). 
 Due to higher wind, lower RH, and smaller leaf sizes in the canopy (Fig. `r fig_NEON_vertical`, Table `r table_leaf_traits`), $g_b$ increases with height (Table `r table_leaf_metabolism`).
 Maximum $g_s$ increases with light, and is thus higher in the sun-exposed upper canopy than in sub-canopy or understory leaves (Table `r table_leaf_metabolism`). 
 However, because water supply often cannot meet the demands incurred by the high irradiance and $g_b$ experienced by sun leaves, midday stomatal depression is more prevalent in sun leaves than shade leaves in closed-canopy forests (Table `r table_leaf_metabolism`), which drives the lower intracellular CO_2 and carbon isotope discrimination discussed in section 3.1 (Table 1).
@@ -363,7 +363,7 @@ Beyond the optimum, photosynthesis decreases as a result of stomatal closure [e.
 We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves, and existing studies reveal no pronounced overall trend with height in the optimum temperatures for photosynthetic processes (Table `r table_leaf_metabolism`).
 Based on consistent positive relationships between growth temperature and optimum temperature of photosynthesis ($T_{opt}$) across sites and seasons [e.g. @tanOptimumAirTemperature2017; @kumarathungeAcclimationAdaptationComponents2019], one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves [@campbell_introduction_1998; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. 
 However, such a trend is not apparent among recent studies, where for three species in Panama, the $T_{opt}$ for sun leaves tended to be moderately, but not significantly, higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019; @hernandezSimilarTemperatureDependence2020]. 
-Similarly, $T_{opt}$ of RuBP carboxylation  ($Vc_{max}$) and regeneration rates ($J_{max}$) did not differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021;@mauTemperateTropicalForest2018]. 
+Similarly, $T_{opt}$ of RuBP carboxylation  ($V_{cmax}$) and regeneration rates ($J_{max}$) did not differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021;@mauTemperateTropicalForest2018]. 
 In contrast, tropical experimental warming observations showed that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from the understory to the canopy, potentially linked to greater thermal sensitivity of $g_s$ in upper canopy leaves [@carterExperimentalWarmingTropical2021a]. 
 @hernandezSimilarTemperatureDependence2020 also speculated that the observed lack of sun-shade differences in $T_{opt}$ may reflect acclimation to similar temperatures of peak photosynthesis. 
 Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of midday stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. 
@@ -433,7 +433,7 @@ Mechanistically, this is almost certainly driven in part by the fact that larger
 Indeed, despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], greater drought sensitivity of larger trees has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraJointEffectsClimateinpress in press], although there is also evidence that short trees in young stands are more drought-sensitive than taller trees in mature forests [@irvineAgerelatedChangesEcosystem2004].
 The relative importance of exposure versus height in shaping drought sensitivity remains to be disentangled.
 
-While it is clear that drought sensitivity increases with crown height though forest vertical gradients, and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies across this gradient.
+Although it is clear that drought sensitivity increases with crown height though forest vertical gradients, and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies across this gradient.
 Because VPD increases rapidly with $T_{air}$, high $T_{air}$ is often associated with atmospheric drought, likely explaining negative growth responses -- particularly among larger trees -- even if soil moisture remains high [@novickIncreasingImportanceAtmospheric2016], or when precipitation is statistically accounted for [Fig. `r fig_treerings`, @anderson-teixeiraJointEffectsClimateinpress in press].
 However, under conditions that are humid enough that canopy trees can maintain high $g_s$, we do not necessarily expect their photosynthesis (see section 4.2) or woody growth to exhibit higher sensitivity to $T_{air}$ than their understory counterparts. 
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
