--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -155,6 +155,12 @@ Wong SC, Cowan IR, Farquhar GD. 1979. Stomatal conductance correlates with photo
 
 A defining feature of forest canopies is their vertical variation in environment and morphology and physiology, originally described through the sun-shade leaf dichotomy or even earlier through vertical stratification diagrams as in Pearson (1971), dating further back such as the classic work of P. W. Richards (1952). Such observations were carried through to the forest meteorology community by Monteith, Jarvis and others in the 1980s (Monteith & Unsworth 1990), and there are well-known patterns in micrometeorology through canopies and first-principle understanding of their meaning for energy balance within canopies. I read this review keenly interested in what these known aspects would mean for the interactions amongst leaf traits and sensitivity to temperature, tie them back to some empirical findings of more recent vintage, and possibly to gain some insights into canopy dieback phenomena during heat events or with climate warming. In the end, the latter weren’t discussed but the authors are applauded for taking on such a huge topic. Fig. 1 is a useful entrée to the subject area.
 
+**Thank you for the review. We have added citations to the references mentioned here. We have also added some discussion of canopy dieback events(?)... [details].**
+
+*Nidhi, be sure to cite all the references listed here.*
+
+*It would be good to add some discussion of canopy dieback events. *[issue #93](https://github.com/EcoClimLab/vertical-thermal-review/issues/93)**
+
 Given the depth of what is known about within-canopy micrometeorology, I would have thought taking this on in a review wouldn’t be needed, or would be daunting and require too much detail to cover it all. As it is, I found the article launches into the empirical info too early in such an article. The article could be improved by going through the theory of how momentum and mass-transfers are attenuated through canopies and then show the empirical info from NEON in America. Overall there is too little on the theory end of things and too much 'case study' for this kind of article (see Monteith and Unsworth, and Gates to enhance the first-principle theory). As an aside, there need to be a number of improvements in Fig. 2, with lines made bolder and also height should be normalised to height relative to the top of the canopy given that trees were very different heights and meteorological masts went above the canopy to different degrees. Doing so would help make the authors’ point about differences in the Figure as well as convergence in certain properties inside canopies rather than everything being on a different y-scale.
 
 Certainly, a discussion with a micrometeorologist or atmospheric scientist, if not already had, could improve the manuscript. Statements like l. 156: 'Wind speeds are also higher at the top of the canopy, owing to the buffering effect of the canopy' are an awkward read. Buffering? There could be much improvement by looking at it the other way: wind will blow as it does at the top of the canopy until encountering the plant canopy top as an aerodynamic drag element; then the additional leaf area entrains air movement and sweep-eject motion and eddies are attenuated through the canopy resulting in progressively lower windspeeds deeper into canopies. I don’t know how buffering enters into this, or what the authors mean here.
