--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -159,11 +159,18 @@ A defining feature of forest canopies is their vertical variation in environment
 
 *Nidhi, be sure to cite all the references listed here.*
 
-*It would be good to add some discussion of canopy dieback events. *[issue #93](https://github.com/EcoClimLab/vertical-thermal-review/issues/93)**
+*It would be good to add some discussion of canopy dieback events. ([issue #93](https://github.com/EcoClimLab/vertical-thermal-review/issues/93))*
 
 Given the depth of what is known about within-canopy micrometeorology, I would have thought taking this on in a review wouldn’t be needed, or would be daunting and require too much detail to cover it all. As it is, I found the article launches into the empirical info too early in such an article. The article could be improved by going through the theory of how momentum and mass-transfers are attenuated through canopies and then show the empirical info from NEON in America. Overall there is too little on the theory end of things and too much 'case study' for this kind of article (see Monteith and Unsworth, and Gates to enhance the first-principle theory). As an aside, there need to be a number of improvements in Fig. 2, with lines made bolder and also height should be normalised to height relative to the top of the canopy given that trees were very different heights and meteorological masts went above the canopy to different degrees. Doing so would help make the authors’ point about differences in the Figure as well as convergence in certain properties inside canopies rather than everything being on a different y-scale.
 
+*It would be good to bring in more theory. ([issue #94](https://github.com/EcoClimLab/vertical-thermal-review/issues/94))*
+
+*Fig 2: [issue #83](https://github.com/EcoClimLab/vertical-thermal-review/issues/83))*
+
 Certainly, a discussion with a micrometeorologist or atmospheric scientist, if not already had, could improve the manuscript. Statements like l. 156: 'Wind speeds are also higher at the top of the canopy, owing to the buffering effect of the canopy' are an awkward read. Buffering? There could be much improvement by looking at it the other way: wind will blow as it does at the top of the canopy until encountering the plant canopy top as an aerodynamic drag element; then the additional leaf area entrains air movement and sweep-eject motion and eddies are attenuated through the canopy resulting in progressively lower windspeeds deeper into canopies. I don’t know how buffering enters into this, or what the authors mean here.
+
+
+*[issue #95](https://github.com/EcoClimLab/vertical-thermal-review/issues/95)*
 
 I was eager to see the part of the manuscript about photoprotection and also its relationship to heat damage. The opening sentence (l. 384) was obvious to the point of being painful to read.  Of course photoprotection is higher in the upper canopy: radiation levels are higher! Can this first sentence get revised to increase information content? This is one of the more exciting topics of the review, yet is handled only in a cursory fashion. If the authors could manage a bit more discussion of this topic it would be useful – instead they move (in the same paragraph) to VOC emissions, something I view as a separate capability of some plants. This is also confused in Fig. 1 where VAZ and VOC are placed on the same line. I’d like to see a more complete discussion of photoprotection and heat dissipation by NPQ first, and a separate paragraph about VOC. Also, there is nothing about critical temperature until late in the manuscript even though the authors skirt the issue in their text about photoprotection. This kind of thermal sensitivity is different from gas exchange (the section where the text about Tcrit occurs, l. 530-555), and should have been discussed earlier in the manuscript.
 
