--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -248,7 +248,12 @@ line641: 'tends to be greater in canopy trees'. Greater than what? Please state 
 
 line650: 'In addition to lower drought resistance of growth, larger trees frequently exhibit lower ability to recover'. Having studied large overstory trees and young understory saplings, I have a very, very difficult time with this statement especially portraying it as categorically true even if consistent with the 4 cited studies. Very few researchers have studies the same species in this context, and in this review manuscript the authors cannot scientifically lay the effect on canopy position and microclimate rather than age or other confounding factors. I must challenge their assertion and ask a higher level of evidence to make these statements, which should be qualified.
 
+*Important point that needs to be addressed.*
+
 line946: '… how … temperature sensitivities of metabolism and woody growth vary across these vertical gradients'. I’m not sure why the authors are speculating on woody growth in this context, surely it would be extremely difficult to show that woody growth varied vertically in an individual? And that across-individual differences compound comparisons of individuals in different vertical strata? Shouldn’t these things be pointed out to readers?
+
+
+*This requires rewording to clarify that we're not discussing intra-individual differences.*
 
 \newpage
 ## References
