--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -62,24 +62,36 @@ L30 I did not understand ‘Scaling up’ in this sentence.
 
 Figure 1 is nice. I struggled with ‘Tleaf sensitivity to shortwave radiation’ but I think it is clear after, when reading the text. Consider using the same words in the paragraph where you detail it (line 268?) and adding the reference to the figure in the text. Or maybe change the term (‘thermal capacitance’ ?) if this is the part you are referring to in the text.
 
+**Done**
 
 Figure 2: Homogenize the units (in parenthesis or in bracket) and add the unit for PAR.
 
+*[issue #83](https://github.com/EcoClimLab/vertical-thermal-review/issues/83)*
+
 I like your figures, but maybe consider homogenizing a little bit the styles for the plots between figures 2 3 and 4.
 
+
 L205-206 Maybe add some references. How many degrees? In your Figure 3 there is not really a difference between Tleaf and Tair when SWR = 0. Given that the transpiration nearly stops at night (high humidity, low conductance) I would expect Tleaf – Tair to be very close to zero.
+
+*Agree, but we're only changing the one variable at a time. Just need to make this clear.*
 
 L219, repetition with L 216
 
 Figure 3: TLeaf and Tleaf.
 
+**Done**
+
 l258 under soil wet conditions?
+
+*doing this because I don't think we want to talk about soil conditions. I've always had atmospheric conditions in my mind as I've thought about this.*
 
 L298-299 Far red to red light: I think this could be developed here or somewhere else. You covered the vertical variation in light quantity inside the canopy, but you could also report the vertical change in light quality (light spectrum) as the leaves absorb preferentially some wavelengths but reflects or transmit others.
 
 L 322 consider homogenizing the photosynthetic capacity (AA) with the other notations in Table 2.
 
 Table 1: Unit for PAR absorptance (should be % I think)
+
+**The units in the table are in %nm i.e. % wavelength**
 
 Paragraphs 3.1 and 3.2:
 I thought that the comparison between intra species and interspecies gradients is very interesting. I wondered if there are more studies to expand it. One key article that I know is (Lloyd et al., 2010) which showed that within tree gradients and between tree gradients are similar for a lot of leaf traits in tropical forests. I think this is one of the reasons why DGCMs are relatively accurate even if the canopy description is quite simple. (The vertical gradients in photosynthetic parameters are scaled on Na gradients, which are the same intra and between species in this study).
@@ -93,18 +105,28 @@ I also think you could describe a little bit more the hydraulic constraints that
 
 L471, I think the word conductance is missing.
 
+**Done**
+
 L 513 Vcmax (c in subscript?)
+
+**Done**
 
 L 609 It is a detail, but you sometimes use the word ‘canopy’ to describe the top of the vegetation, and sometimes you precise ‘top of canopy’. You also use canopy to describe all the vegetation from understory to the canopy, and you sometimes change definition from one sentence to another. Usually, it is easy to understand with the context of the sentence, but you might want to be consistent everywhere.
 
 L 665 though
 
+**Done**
+
 More details on my thoughts for the ‘Scaling across space and time’ paragraph:
 
 Most DGCMs represent a vertical variability in the main physiological parameters (Vcmax, Jmax, Rdark, Na). See for example (Krinner et al., 2005; Clark et al., 2011; Oleson et al., 2013). They all use some form of an exponential decrease in the photosynthetic parameters from the canopy to the ground. Since a lot of parameters and variables depend on Vcmax (for example A and therefore gs), this allows the representation of the vertical variation of a lot of leaf traits and variables. Big leaf models have this capability (see for example Krinner et al. 2005 that you cited, Appendix, or Clark et al. 2011). I think it is not clear in the way you wrote this paragraph, and it looks like ‘big leaf’ models do not represent any vertical variation at all. Note also that it is possible to use multi-layer models with or without considering shaded and sunlit leaves (See for example Clark et al. 2011).
 
+*[issue #82](https://github.com/EcoClimLab/vertical-thermal-review/issues/82)*
+
+
 To me, an important remark is that most gradients in DGVMs are prescribed. More data would of course help to better understand and quantify the gradients, and to compare them with model representations (part ‘Scaling in situ data with remote sensing’ of your paper). But in the end, the mechanisms explaining those gradients are still not really known, in the sense that they can’t be efficiently modeled prognostically. This is due to the multiple sources of parameters variation that you highlighted (light environment, temperature, hydraulic, …). A lot of research is done using optimality frameworks to try and predict the photosynthetic and other vegetation traits based on environmental variables. See for example (Ali et al., 2016; Buckley, 2021). A question I have, is if including more precise cohorts as you suggest, would improve the accuracy of models given all the uncertainty in the parametrization of their traits.
 
+*[issue #82](https://github.com/EcoClimLab/vertical-thermal-review/issues/82)*
 
 Table S3: Including the words vertical or vertical gradient could have been useful.
 
