--- a/response-to-reviews.Rmd
+++ b/response-to-reviews.Rmd
@@ -79,6 +79,8 @@ L205-206 Maybe add some references. How many degrees? In your Figure 3 there is 
 
 L219, repetition with L 216
 
+**Done**
+
 Figure 3: TLeaf and Tleaf.
 
 **Done**
